# merkle-tree-builder

./: CONTRIBUTING.md  README.md
.github/workflows/: cairo.yml  ci.yml  rust.yml
merkle_tree_cairo/: Scarb.toml
merkle_tree_cairo/.github/workflows/: cairo.yml  rust.yml
merkle_tree_cairo/.snfoundry_cache/: .prev_tests_failed
merkle_tree_cairo/src/: claimer.cairo  lib.cairo
merkle_tree_cairo/tests/: constants.cairo  lib.cairo  tests_merkle_tree.cairo
merkle_tree_rust/: Cargo.toml  script.py
merkle_tree_rust/data/: mock_allocations_second_wave.json
merkle_tree_rust/output/: first_merkle_tree_data.txt  second_merkle_tree_data.txt
merkle_tree_rust/src/: lib.rs  merkle_tree.rs  prepare_integration_tests.rs
merkle_tree_rust/src/core/: allocation.rs  merkle_tree.rs  node.rs
merkle_tree_rust/src/tests/: merkle_tree_tests.rs
merkle_tree_rust/tests/: allocation_tests.rs  first_merkle_tree_data.txt  integration.rs  merkle_tree_tests.rs  merkle_tree_tests_old.rs  mock_allocations_first_wave.json  mock_allocations_second_wave.json  node_tests.rs  prepare_integration_tests.rs  second_merkle_tree_data.txt
