[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", version = "0.11.0" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", package = "starknet-crypto", version = "0.7.0" }

[[bin]]
name = "store_merkle_data"
path = "tests/prepare_integration_tests.rs"
[lib]
path = "src/lib.rs"